feat: rename bind to app in upstream options API and CLI

--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -6705,7 +6705,7 @@ spec:
                       upstreams.
                     items:
                       properties:
-                        bind:
+                        app:
                           description: Main bind for this upstream
                           type: string
                         canary:
@@ -6747,7 +6747,7 @@ spec:
                               type: integer
                           type: object
                       required:
-                      - bind
+                      - app
                       type: object
                     type: array
                 type: object
