--- a/config/crd/bases/extensions.tsuru.io_rpaasvalidations.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasvalidations.yaml
@@ -6645,7 +6645,7 @@ spec:
                   upstreams.
                 items:
                   properties:
-                    bind:
+                    app:
                       description: Main bind for this upstream
                       type: string
                     canary:
@@ -6687,7 +6687,7 @@ spec:
                           type: integer
                       type: object
                   required:
-                  - bind
+                  - app
                   type: object
                 type: array
             type: object
