feat: update default kubectl image to tsuru/kubectl
Replaces all references to the default kubectl image from
"bitnami/kubectl:latest" to "tsuru/kubectl:latest" in code, CRDs, and
documentation. This ensures consistency and aligns with the preferred
container image for session ticket rotation and cache sync jobs.

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -6627,7 +6627,7 @@ spec:
                         description: |-
                           Image is the container image name used to execute the session ticket
                           rotation job. It requires either "bash", "base64", "openssl" and "kubectl"
-                          programs be installed into. Defaults to "bitnami/kubectl:latest".
+                          programs be installed into. Defaults to "tsuru/kubectl:latest".
                         type: string
                       keepLastKeys:
                         description: |-
